changed main greeting header

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <img src='images/sam-ar2.jpg' style="width:100%;">
+    <img src='images/sam-header2.jpg' style="width:100%;">
     
     
   
