--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <p><strong>Foliage, Inc.</strong> Feb 2012-present<br/>
              Mechanical Engineer - Project based consulting engagements in a client facing role. Responsibilities included proposal writing, requirements definition, schedule planning, design/engineering, build/integration, and knowledge transfer. Typically worked in small teams with electrical engineers and other disciplines to implement designs.</p>
           <p><strong>MIT Lincoln Labs</strong>, 2007-2012<br/>
-             Assistant Staff Mechanical Engineer - Worked closely with optical, thermal, and control systems engineers to support system requirements with mechanical designs. Responsibilities included mechanism design/analysis, documentation, and oversight of assembly and test procedures, .</p>
+             Assistant Staff Mechanical Engineer - Worked closely with optical, thermal, and control systems engineers to support system requirements with mechanical designs. Responsibilities included mechanism design/analysis, documentation, and oversight of assembly and test procedures.</p>
         </div>
       </div>
       
