fixed awkwardengineer link

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <div class="row">
         <div class="col-sm-4">
           <h2>Awkward Engineer Creations, LLC</h2>    
-          <p>Founder, entrepreneur, small business. End to end development from concept to market. Successfully launched a novelty panic button light switch product. Work included component sourcing, supplier and assembly house relationship management, sales, web development, packaging, graphic design and more. Product has sales in the 1000's of units/year. <a href="www.awkwardengineer.com">www.awkwardengineer.com</a></p>
+          <p>Founder, entrepreneur, small business. End to end development from concept to market. Successfully launched a novelty panic button light switch product. Work included component sourcing, supplier and assembly house relationship management, sales, web development, packaging, graphic design and more. Product has sales in the 1000's of units/year. <a href="http://www.awkwardengineer.com">www.awkwardengineer.com</a></p>
         <div class="text-center"><img src='images/AwkEngLogo-dark.png' style="max-width:25%;" ></div>
         </div>
         
