--- a/index.html
+++ b/index.html
@@ -79,21 +79,28 @@
           <p> Worked independently within a larger team, supporting the optical engineers to ensure that the mechanism could meet depth of travel and optical surface quality requirements. Other responsibilities included analysis for random vibration loads. Wrote and supervised the test procedures and correlated test results with finite element models.</p>
         </div>
         <div class="col-sm-4">
-          <h2>Medical Device Case Design</h2>
-          <p>Worked with client and small team of electrical and software engineers to develop a portable EEG. Work included case industrial design, CAD modeling, and eventual transfer to contract manufacturer.</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-4">
           <h2>Precision Rotary Encoder Mounting and Alignment</h2>
           <p> Assisted the control system engineers to make sure that windup errors in the mount did not exceed specifications. Worked with technician to align and install encoders. </p>
         </div>
+  
+      </div>
+      <div class="row">
         <div class="col-sm-4">
           <h2>Los Alamos National Labs</h2>
           <p>Awarded Patent <a href="https://www.google.com/patents/US7627448?dq=7627448&hl=en&sa=X&ei=Ol1pUvTkMs6dkQe1p4CAAQ&ved=0CDcQ6AEwAA">#7,627,448</a>. As part of a 3 person team, designed and built a laser tracking system to help automate crime scene evidence/sample collection. Was responsible for hardware design, construction, and programming the microcontroller to interface with the sensor package. </p>
         </div>        
-        <div class="col-sm-4">
-
+        <div class="col-sm-8">
+              <h2>Medical Device Case Design</h2>
+              <p>Worked with client and small team of electrical and software engineers to develop a portable EEG. Work included case industrial design, CAD modeling, and eventual transfer to contract manufacturer.</p>
+          <div class="row">
+              <div class="col-sm-6">
+              <img src='images/med_device_1.jpg' style="width:100%;" > </br></br>
+              </div>
+              <div class="col-sm-6">
+              <img src='images/med_device_2.jpg' style="width:100%;" > </br></br>
+              </div>
+          </div>
+          
         </div>
       </div>  
            
